✨ [feat]googlemap 연동

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUaKG-t8GL8E_zGAlchQTCh1_aT6K2cfc&callback=initMap&v=weekly"
+      defer></script>
   </body>
 </html>
